...
    );
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(title: Text('Simulações')),
      body: Center(
        child: ListView.separated(
          itemBuilder: (context, i) {
            return ListTile(
              title: Text(
                '${DateFormat('dd/MM/yyyy').format(DateTime.parse(dados[i].data.toString()))} - ${DateFormat('hh:mm').format(DateTime.parse(dados[i].data.toString()))}',
...
